--- a/vintelo-ejs-main/app/views/pages/adicionar.ejs
+++ b/vintelo-ejs-main/app/views/pages/adicionar.ejs
@@ -11,7 +11,7 @@
     <!-- Header Desktop -->
     <section class="desktop-header">
         <section class="top-bar">
-            <p>10% OFF na primeira compra</p>
+            <p>10% OFF na primeira compra online</p>
         </section>
         <header class="main-header">
             <a href="/homevendedor">
