--- a/vintelo-ejs-main/app/public/css/comprador.css
+++ b/vintelo-ejs-main/app/public/css/comprador.css
@@ -1,5 +1,4 @@
 /*                                                        reset basico                                                 */
-/* Reset básico */
 * {
     margin: 0;
     padding: 0;
@@ -12,7 +11,7 @@
     color: #333;
   }
   
-  /* Header - Mobile First */
+  /*            cabeçalho mobile             */
   header {
     background-color: #fff;
     padding: 20px;
@@ -29,7 +28,7 @@
     height: 40px;
   }
   
-  /* Estilos para tablets e acima */
+  /*              tablets e desk           */
   @media (min-width: 768px) {
     header {
       padding: 40px;
@@ -39,8 +38,7 @@
       height: 50px;
     }
   }
-  
-  /* Estilos para desktops */
+
   @media (min-width: 1024px) {
     header {
       padding: 50px;
@@ -152,9 +150,8 @@ label {
     background-color: #5f1d29;
 }
 
-/* Responsividade */
+/*              Responsividade             */
 
-/* Para telas menores que 768px (celulares) */
 @media (max-width: 768px) {
     .container {
         max-width: 100%;
@@ -191,7 +188,7 @@ label {
 
 }
 
-/* Para telas entre 769px e 1024px (tablets) */
+/*              tablets              */
 @media (min-width: 769px) and (max-width: 1024px) {
     .container {
         max-width: 85%;
@@ -216,7 +213,7 @@ label {
     }
 }
 
-/* Para telas maiores que 1024px (desktops) */
+/*                desktops             */
 @media (min-width: 1025px) {
     .container {
         max-width: 400px;
